[gd_scene load_steps=19 format=3 uid="uid://b0hyfr2b3k47t"]

[ext_resource type="Theme" uid="uid://bev8s04hvds01" path="res://Themes/UI Theme.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://cfsopj4wqo48i" path="res://Images/HUD.ScatlingGun.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dw2tkcthulm4n" path="res://Images/HUD.Shotgun.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bbxabnsn633wd" path="res://Images/HUD.RocketLauncher.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b8o31l6s35llr" path="res://Images/HUD.Pistol.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b87tr5ugueh8x" path="res://Images/HUD.RailGun.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dvs682kkxgcb1" path="res://Images/HUD.Button.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cr2dpuw63braa" path="res://Images/gnome-store.png" id="8"]
[ext_resource type="Texture2D" uid="uid://chq0x217cc6y2" path="res://Images/HUD.Button.Pressed.png" id="9"]
[ext_resource type="Script" path="res://Scripts/Store.gd" id="10"]
[ext_resource type="Texture2D" uid="uid://cgvck33lb871v" path="res://Images/exit-button.png" id="11"]
[ext_resource type="FontFile" uid="uid://ddvv3rqspw0h3" path="res://Fonts/Silkscreen/slkscrb.ttf" id="12"]
[ext_resource type="Texture2D" uid="uid://d5xijwvbfe48" path="res://Images/HUD.SquareFrame.1.png" id="13"]
[ext_resource type="Texture2D" uid="uid://buevuwfnht5xy" path="res://Images/Crap.png" id="14"]
[ext_resource type="AudioStream" uid="uid://er2d5vg4qmck" path="res://Audio/UI/Click.wav" id="15"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("12")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"pistol",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": true,
"name": &"railgun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"rocket-launcher",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"scatling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"shotgun",
"speed": 5.0
}]

[node name="Store" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("10")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StoreBG" type="AnimatedSprite2D" parent="CanvasLayer"]
scale = Vector2(2.222, 2.222)
sprite_frames = SubResource("1")
centered = false

[node name="TotalPooContainer" type="NinePatchRect" parent="CanvasLayer"]
offset_left = 256.0
offset_top = 64.0
offset_right = 512.0
offset_bottom = 120.0
grow_horizontal = 2
size_flags_horizontal = 3
texture = ExtResource("13")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="PooIcon" type="TextureRect" parent="CanvasLayer/TotalPooContainer"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 48.0
texture = ExtResource("14")
expand_mode = 1
stretch_mode = 1

[node name="TotalPooCount" type="Label" parent="CanvasLayer/TotalPooContainer"]
layout_mode = 0
anchor_left = 0.156
anchor_top = 0.5
anchor_right = 0.156
anchor_bottom = 0.5
offset_left = 0.0639992
offset_top = -20.0
offset_right = 208.064
offset_bottom = 20.0
theme = ExtResource("1")
theme_override_fonts/font = SubResource("3")
text = "0"

[node name="Pistol" type="Node2D" parent="CanvasLayer"]
position = Vector2(90, 184)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Pistol"]
z_index = 3
position = Vector2(36, 34)
scale = Vector2(3, 3)
sprite_frames = SubResource("2")
animation = &"pistol"

[node name="Button" type="TextureButton" parent="CanvasLayer/Pistol"]
offset_right = 72.0
offset_bottom = 72.0
texture_normal = ExtResource("7")
texture_pressed = ExtResource("9")

[node name="Label" type="Label" parent="CanvasLayer/Pistol"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = 21.0
offset_right = -3.0
offset_bottom = 51.0
theme = ExtResource("1")
text = "10"

[node name="Shotgun" type="Node2D" parent="CanvasLayer"]
position = Vector2(293, 184)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Shotgun"]
z_index = 3
position = Vector2(36, 34)
scale = Vector2(3, 3)
sprite_frames = SubResource("2")
animation = &"shotgun"

[node name="Button" type="TextureButton" parent="CanvasLayer/Shotgun"]
offset_right = 72.0
offset_bottom = 72.0
texture_normal = ExtResource("7")
texture_pressed = ExtResource("9")

[node name="Label" type="Label" parent="CanvasLayer/Shotgun"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = 21.0
offset_right = -3.0
offset_bottom = 51.0
theme = ExtResource("1")
text = "20"

[node name="RocketLauncher" type="Node2D" parent="CanvasLayer"]
position = Vector2(189, 277)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/RocketLauncher"]
z_index = 3
position = Vector2(36, 34)
scale = Vector2(3, 3)
sprite_frames = SubResource("2")
animation = &"rocket-launcher"

[node name="Button" type="TextureButton" parent="CanvasLayer/RocketLauncher"]
offset_right = 72.0
offset_bottom = 72.0
texture_normal = ExtResource("7")
texture_pressed = ExtResource("9")

[node name="Label" type="Label" parent="CanvasLayer/RocketLauncher"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 21.0
offset_right = -13.0
offset_bottom = 51.0
theme = ExtResource("1")
text = "40"

[node name="Scatling" type="Node2D" parent="CanvasLayer"]
position = Vector2(391, 277)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Scatling"]
z_index = 3
position = Vector2(36, 34)
scale = Vector2(3, 3)
sprite_frames = SubResource("2")
animation = &"scatling"

[node name="Button" type="TextureButton" parent="CanvasLayer/Scatling"]
offset_right = 72.0
offset_bottom = 72.0
texture_normal = ExtResource("7")
texture_pressed = ExtResource("9")

[node name="Label" type="Label" parent="CanvasLayer/Scatling"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 21.0
offset_right = -13.0
offset_bottom = 51.0
theme = ExtResource("1")
text = "60"

[node name="Railgun" type="Node2D" parent="CanvasLayer"]
position = Vector2(496, 184)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Railgun"]
z_index = 3
position = Vector2(36, 34)
scale = Vector2(3, 3)
sprite_frames = SubResource("2")
animation = &"railgun"

[node name="Button" type="TextureButton" parent="CanvasLayer/Railgun"]
offset_right = 72.0
offset_bottom = 72.0
texture_normal = ExtResource("7")
texture_pressed = ExtResource("9")

[node name="Label" type="Label" parent="CanvasLayer/Railgun"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 21.0
offset_right = -7.0
offset_bottom = 51.0
theme = ExtResource("1")
text = "100"

[node name="ExitButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 592.0
offset_top = 16.0
offset_right = 624.0
offset_bottom = 48.0
texture_normal = ExtResource("11")

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15")
volume_db = -10.0

[node name="CloseStoreBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="button_down" from="CanvasLayer/Pistol/Button" to="." method="_on_PistolButton_button_down"]
[connection signal="button_down" from="CanvasLayer/Shotgun/Button" to="." method="_on_ShotgunButton_button_down"]
[connection signal="button_down" from="CanvasLayer/RocketLauncher/Button" to="." method="_on_RocketLauncherButton_button_down"]
[connection signal="button_down" from="CanvasLayer/Scatling/Button" to="." method="_on_ScatlingButton_button_down"]
[connection signal="button_down" from="CanvasLayer/Railgun/Button" to="." method="_on_RailgunButton_button_down"]
[connection signal="button_down" from="CanvasLayer/ExitButton" to="." method="_on_ExitButton_button_down"]
[connection signal="timeout" from="CloseStoreBuffer" to="." method="_on_CloseStoreBuffer_timeout"]
